# be6502emu

./: .gitignore  .helperconf  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements_dev.txt  tox.ini  tox_req.txt
.github/workflows/: tests.yml
src/be6502emu/: __init__.py  core.py  mpu.py
tests/: test_emulator.py  test_opcodes.py
