[project]
name = "be6502emu"
version = "0.1.0"
description = "Emulator created for the Ben Eater's 6502 computer specifically"
authors = [
    {name = "Voyager", email = "voyager-2021@outlook.com"},
]
dependencies = [
    "numpy>=2.1.3",
    "dearpygui>=2.0.0",
    "psutil>=6.1.0",
    "rich>=13.9.4",
]
requires-python = ">=3.10,<3.13"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
be6502emu = "be6502emu.emulator:main"
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
dev = [
    "rich>=13.9.4",
    "pytest>=8.3.3",
    "pip>=24.3.1",
    "pdm>=2.21.0",
    "tox>=4.23.2",
    "flake8>=7.1.1",
    "mypy>=1.13.0",
    "pyinstaller>=6.11.1",
]

[flake8]
max-line-length = 160

[tool.pytest.ini_options]
addopts = "-v"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
[tool.pdm]
distribution = true
package-dir = "src"

